--- a/VMS.Keystone.UIAutomationLibrary/Selenium.UIAutomationLibrary.csproj
+++ b/VMS.Keystone.UIAutomationLibrary/Selenium.UIAutomationLibrary.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{30C183E9-0A0C-46A0-948B-513F97854B5F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VMS.Keystone.UIAutomationLibrary</RootNamespace>
-    <AssemblyName>VMS.Keystone.UIAutomationLibrary</AssemblyName>
+    <RootNamespace>Selenium.UIAutomationLibrary</RootNamespace>
+    <AssemblyName>Selenium.UIAutomationLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -50,10 +50,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GetUIControls.cs" />
-    <Compile Include="UIControlsActions.cs" />
+    <Compile Include="UIControlsAction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UIFactoryClass.cs" />
+    <Compile Include="UIFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
